# LibEase

./: CMakeLists.txt  Makefile  cmake_install.cmake  library
data/: books.csv  members.csv
include/: Auth.hpp  Book.hpp  User.hpp  Utils.hpp
src/: add_book.cpp  auth.cpp  display_book.cpp  display_members.cpp  edit_profile.cpp  issue_book.cpp  main.cpp  return_book.cpp  search_book.cpp  search_member.cpp  utils.cpp
